logs/poker-program-demo.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/holdem'...
Compiling './lib/python3.5/site-packages/holdem/betting_rounds_holdem.py'...
***   File "./lib/python3.5/site-packages/holdem/betting_rounds_holdem.py", line 25
    print '\nstarting betting round!!!'
                                      ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/holdem/dealer_holdem.py'...
***   File "./lib/python3.5/site-packages/holdem/dealer_holdem.py", line 12
    print 'dealing hands'
                        ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/holdem/deck.py'...
***   File "./lib/python3.5/site-packages/holdem/deck.py", line 55
    print 'shufflin!'
                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/holdem/holdem_game.py'...
***   File "./lib/python3.5/site-packages/holdem/holdem_game.py", line 140
    print '\nstarting hand, button = %d\n' % button
                                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/holdem/organize_pots.py'...
***   File "./lib/python3.5/site-packages/holdem/organize_pots.py", line 28
    print 'Bet increase: %d' % bet_increase
                           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/holdem/rules_holdem.py'...
***   File "./lib/python3.5/site-packages/holdem/rules_holdem.py", line 231
    print "\n%s has a straight flush!" % player.screen_name
                                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/holdem/tests.py'...
***   File "./lib/python3.5/site-packages/holdem/tests.py", line 53
    print 'We are missing chips?!?!'
                                   ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/poker_program_demo-0.1.0.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
